brave-goat-7k5w89-dev-ed.my.salesforce.com/force-app/main/default/objects/Candidato__c/Candidato__c.object-meta.xml
<CustomObject>
    <label>Candidato</label>
    <nameField>
        <label>Candidato Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Candidatos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>