brave-goat-7k5w89-dev-ed.my.salesforce.com/force-app/main/default/objects/Candidato__c/fields/Aceite__c.field-meta.xml
<CustomField>
    <fullName>Aceite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aceite</label>
    <type>Checkbox</type>
</CustomField>