brave-goat-7k5w89-dev-ed.my.salesforce.com/force-app/main/default/objects/Candidato__c/fields/DataNascimento__c.field-meta.xml
<CustomField>
    <fullName>DataNascimento__c</fullName>
    <label>DataNascimento</label>
    <type>Date</type>
</CustomField>