brave-goat-7k5w89-dev-ed.my.salesforce.com/force-app/main/default/objects/Candidato__c/fields/Idade__c.field-meta.xml
<CustomField>
    <fullName>Idade__c</fullName>
    <description>Idade do Candidato</description>
    <formula>(TODAY() - DataNascimento__c) /365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Idade</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>