brave-goat-7k5w89-dev-ed.my.salesforce.com/force-app/main/default/objects/Candidato__c/fields/Pontua_o__c.field-meta.xml
<CustomField>
    <fullName>Pontua_o__c</fullName>
    <description>Critério de pontuação do candidato</description>
    <formula>FLOOR( ValorDivida__c / 1000) + 40000 - IF( Idade__c &gt;80, 40000, ( ABS( Idade__c -40) *1000))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pontuação</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>