brave-goat-7k5w89-dev-ed.my.salesforce.com/force-app/main/default/objects/Candidato__c/fields/ValorDivida__c.field-meta.xml
<CustomField>
    <fullName>ValorDivida__c</fullName>
    <description>Valor que o candidato deve</description>
    <label>Valor da Dívida</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>