brave-goat-7k5w89-dev-ed.my.salesforce.com/force-app/main/default/objects/Candidato__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Pontua_o__c</columns>
    <columns>Idade__c</columns>
    <columns>ValorDivida__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>